--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         displayQR(savedCode);
       } else {
         document.getElementById("qrContainer").innerHTML = '';
-        document.getElementById('code').textContent = 'Invalid payment';
+        document.getElementById('code').textContent = 'Invalid payment: Check download folder for QR Code!';
         document.getElementById('overlay').remove();
       }
     }
