--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const machineId = '0243';
+    const machineId = localStorage.getItem('current_machine_id') || '0243';
 
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
     const isValidAmount = validAmounts.includes(amountStr);
