--- a/payment.html
+++ b/payment.html
@@ -16,9 +16,9 @@
   <div class="buttons">
     <!-- Replace with YOUR actual 4 Payment Link URLs -->
     <a id="btn1" class="buy-btn" href="https://buy.stripe.com/test_9B63cn7i6b8vbwh7QefMA01">Buy 1 Play ($1.39)</a>
-    <a id="btn3" class="buy-btn" href="https://buy.stripe.com/YOUR_3.39_LINK">Buy 3 Plays ($3.39)</a>
-    <a id="btn5" class="buy-btn" href="https://buy.stripe.com/YOUR_5.39_LINK">Buy 5 Plays ($5.39)</a>
-    <a id="btn10" class="buy-btn" href="https://buy.stripe.com/YOUR_10.39_LINK">Buy 10 Plays ($10.39)</a>
+    <a id="btn3" class="buy-btn" href="https://buy.stripe.com/test_14A8wH6e2a4r9o92vUfMA03">Buy 3 Plays ($3.39)</a>
+    <a id="btn5" class="buy-btn" href="https://buy.stripe.com/test_6oUeV5aui1xV0RD1rQfMA00">Buy 5 Plays ($5.39)</a>
+    <a id="btn10" class="buy-btn" href="https://buy.stripe.com/test_28EbITbym0tR2ZL7QefMA04">Buy 10 Plays ($10.39)</a>
   </div>
 
   <script>
