--- a/payment.html
+++ b/payment.html
@@ -9,13 +9,18 @@
     h1 { font-size: 2.8em; margin: 20px 0; }
     h2 { font-size: 2em; margin: 30px 0; color: #FFFF00; }
     #machine-info { font-size: 1.8em; margin: 20px 0; color: #FFFFFF; font-weight: bold; }
+    #no-machine { font-size: 2.2em; font-weight: bold; margin: 60px 0; color: #FFFF00; }
     .buttons { margin: 40px 0; }
     .buy-btn { display: block; margin: 20px auto; padding: 30px; background: #FFFF00; color: black; font-size: 2em; text-decoration: none; border-radius: 15px; width: 80%; max-width: 600px; }
+    .buy-btn.disabled { background: #666666; color: #999999; pointer-events: none; }
+    .lost-btn { display: block; margin: 40px auto; padding: 20px; background: #333333; color: #FFFF00; font-size: 1.8em; text-decoration: none; border-radius: 15px; width: 80%; max-width: 600px; border: 2px solid #FFFF00; }
     @media (max-width: 600px) {
       h1 { font-size: 2.4em; }
       h2 { font-size: 1.8em; }
       #machine-info { font-size: 1.6em; }
+      #no-machine { font-size: 1.8em; }
       .buy-btn { font-size: 1.8em; padding: 25px; }
+      .lost-btn { font-size: 1.6em; }
     }
   </style>
 </head>
@@ -24,6 +29,8 @@
   <h2>Select Your Plays</h2>
   <div id="machine-info">You Have Chosen Machine: <span id="machine-id">Loading...</span></div>
 
+  <div id="no-machine" style="display:none;">Scan the QR Code to Play!</div>
+
   <div class="buttons">
     <a id="btn1" class="buy-btn" href="https://buy.stripe.com/test_9B63cn7i6b8vbwh7QefMA01">Buy 1 Play ($1.39)</a>
     <a id="btn3" class="buy-btn" href="https://buy.stripe.com/test_14A8wH6e2a4r9o92vUfMA03">Buy 3 Plays ($3.39)</a>
@@ -31,27 +38,44 @@
     <a id="btn10" class="buy-btn" href="https://buy.stripe.com/test_28EbITbym0tR2ZL7QefMA04">Buy 10 Plays ($10.39)</a>
   </div>
 
+  <!-- Lost QR Code button -->
+  <a id="lost-btn" class="lost-btn" href="https://tracreader.github.io/trac-qr-success/">Lost QR Code? Click here to fetch it</a>
+
   <script>
-    // Always read mid from URL (if present) — this allows switching machines
+    // Always read mid from URL (if present) — allows switching machines
     const urlParams = new URLSearchParams(window.location.search);
     const obfuscatedMid = urlParams.get('mid');
 
     let realMachineId = 'unknown';
 
     if (obfuscatedMid) {
-      // Extract real machine ID: everything before the last "-"
       const lastDashIndex = obfuscatedMid.lastIndexOf('-');
       realMachineId = lastDashIndex > 0 ? obfuscatedMid.substring(0, lastDashIndex) : obfuscatedMid;
-
-      // Overwrite localStorage with the new (current) machine ID
       localStorage.setItem('current_machine_id', realMachineId);
     } else {
-      // No mid in URL — fall back to saved (recovery or refresh)
       realMachineId = localStorage.getItem('current_machine_id') || 'unknown';
     }
 
-    // Display the machine ID
-    document.getElementById('machine-id').textContent = realMachineId === 'unknown' ? 'Unknown' : realMachineId;
+    // Display machine ID
+    const machineSpan = document.getElementById('machine-id');
+    machineSpan.textContent = realMachineId === 'unknown' ? 'Unknown' : realMachineId;
+
+    // If no valid machine ID — disable buttons and show message
+    if (realMachineId === 'unknown') {
+      document.querySelectorAll('.buy-btn').forEach(btn => {
+        btn.classList.add('disabled');
+      });
+      document.getElementById('lost-btn').style.display = 'none';
+      document.getElementById('no-machine').style.display = 'block';
+      document.getElementById('machine-info').style.display = 'none';
+    } else {
+      // Update buttons with correct client_reference_id
+      document.querySelectorAll('.buy-btn').forEach(btn => {
+        const url = new URL(btn.href);
+        url.searchParams.set('client_reference_id', realMachineId);
+        btn.href = url.toString();
+      });
+    }
 
     // Clean URL with dummy variables
     const cleanUrl = window.location.pathname + 
@@ -60,13 +84,6 @@
       "&payment_id=" + Date.now() + Math.floor(Math.random() * 10000) +
       "&token=" + Math.random().toString(36).substring(2, 8);
     window.history.replaceState({}, document.title, cleanUrl);
-
-    // Update buttons to pass the current real machine ID to Stripe
-    document.querySelectorAll('.buy-btn').forEach(btn => {
-      const url = new URL(btn.href);
-      url.searchParams.set('client_reference_id', realMachineId);
-      btn.href = url.toString();
-    });
   </script>
 </body>
 </html>
