--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   <div id="code"></div>
 
   <script>
-    // Generate strong random nonce (20 chars = high entropy)
+    // Generate 12-character nonce (shortest safe length — bulletproof)
     function generateNonce() {
       const chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
       let result = '';
-      for (let i = 0; i < 20; i++) {
+      for (let i = 0; i < 12; i++) {
         result += chars.charAt(Math.floor(Math.random() * chars.length));
       }
       return result;
@@ -146,7 +146,7 @@
     }
 
     if (isValidSession && isValidAmount && plays > 0) {
-      const nonce = generateNonce();
+      const nonce = generateNonce(); // 12 chars — short & safe
       const payload = `${plays}|${machineId}|${nonce}`;
       const code = payload;
 
