--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div id="code"></div>
 
   <script>
-    // Generate 12-character nonce (shortest safe length — bulletproof)
+    // Generate 12-character nonce
     function generateNonce() {
       const chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
       let result = '';
@@ -93,12 +93,11 @@
     const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
 
+    // DUMMY URL — looks exactly like real Stripe redirect (live mode format)
     if (sessionId || amountStr) {
-      const cleanUrl = window.location.pathname +
-        "?status=success" +
-        "&ref=" + Math.random().toString(36).substring(2, 10) +
-        "&payment_id=" + Date.now() + Math.floor(Math.random() * 10000) +
-        "&token=" + Math.random().toString(36).substring(2, 8);
+      const dummySession = 'cs_live_' + 'X'.repeat(51); // 51 X's = real length
+      const dummyAmount = amountStr || '10.39'; // use real amount if available
+      const cleanUrl = window.location.pathname + `?session_id=${dummySession}&amount=${dummyAmount}`;
       window.history.replaceState({}, document.title, cleanUrl);
     }
 
@@ -146,7 +145,7 @@
     }
 
     if (isValidSession && isValidAmount && plays > 0) {
-      const nonce = generateNonce(); // 12 chars — short & safe
+      const nonce = generateNonce();
       const payload = `${plays}|${machineId}|${nonce}`;
       const code = payload;
 
